--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,3 +17,12 @@ help:
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+    
+clean:
+    rm -rf $(BUILDDIR)/*
+    rm -rf auto_examples/
+    rm -rf modules/generated/*
+html-noplot:
+    $(SPHINXBUILD) -D plot_gallery=0 -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+    @echo
+    @echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
